# Fastapi_Prototype-Project

./: .env  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/endpoints/: user.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: users.py
app/schemas/: users.py
app/services/: db_service.py
app/test/services_test/: db_services_test.py
migrations/: env.py
migrations/versions/: 1ce4d1dc2627_initial_migration.py
