[tool.poetry]
name = "fastapi-prototype-project"
version = "0.1.0"
description = ""
authors = ["MARVRK <bfg578@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.36"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"
alembic = "^1.14.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
